<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/chelsea"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/arsenal"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="67dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/scores"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/chelseaGoal"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/arsenalGoal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="58dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/fouls"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/chelseaFoul"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/arsenalFoul"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/chelseaGoalButton"
        android:layout_width="117dp"
        android:layout_height="47dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/chel_goal"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chelseaFoul" />

    <Button
        android:id="@+id/arsenalGoalButton"
        android:layout_width="117dp"
        android:layout_height="47dp"
        android:layout_marginTop="100dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/ars_goal"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arsenalFoul" />

    <Button
        android:id="@+id/arsenalFoulButton"
        android:layout_width="117dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/ars_foul"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arsenalGoalButton"
        app:layout_constraintVertical_bias="0.395" />

    <Button
        android:id="@+id/chelseaFoulButton"
        android:layout_width="117dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/chel_foul"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chelseaGoalButton"
        app:layout_constraintVertical_bias="0.404" />

    <TextView
        android:id="@+id/arsenalGoal"
        android:layout_width="25dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/arsenalFoul"
        android:layout_width="25dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="52dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arsenalGoal" />

    <TextView
        android:id="@+id/chelseaFoul"
        android:layout_width="25dp"
        android:layout_height="41dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chelseaGoal" />

    <TextView
        android:id="@+id/chelseaGoal"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/reset"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</android.support.constraint.ConstraintLayout>